@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-15T01:19:41Z",
+  "timestamp" : "2022-06-15T08:21:13Z",
   "count_outdated" : 333,
   "uniques_outdated" : 188,
-  "count" : 362,
+  "count" : 361,
   "uniques" : 207,
   "clones" : [
     {
       "timestamp": "2022-06-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
