@@ -1,10 +1,10 @@
 {
-  "count": 29,
+  "count": 28,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-06-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
