@@ -1,3 +1,10 @@
+2022-06-15T08:21:13Z:
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 188 333 / 207 362
+* notice: next accum: outdated-unq outdated-all / unq all: 188 333 / 207 361
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-06-01]
+
 2022-06-15T01:19:41Z:
 * notice: last 14d: unq all: 6 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 185 329 / 205 357
